@@ -15,12 +15,15 @@
  */
 package org.springframework.faces.webflow;
 
+import java.lang.reflect.Method;
+
 import javax.faces.context.FacesContext;
 import javax.faces.event.PhaseEvent;
 import javax.faces.event.PhaseId;
 import javax.faces.event.PhaseListener;
 import javax.faces.lifecycle.Lifecycle;
 
+import org.springframework.util.ReflectionUtils;
 import org.springframework.webflow.execution.RequestContextHolder;
 
 /**
@@ -63,6 +66,20 @@ public class JsfUtils {
 			return true;
 		} else {
 			return false;
+		}
+	}
+
+	// This method is here for JSF 1.2 backwards compatibility
+
+	static void publishPostRestoreStateEvent() {
+		try {
+			Class<?> clazz = Class.forName("org.springframework.faces.webflow.Jsf2FlowApplication");
+			Method method = ReflectionUtils.findMethod(clazz, "publishPostRestoreStateEvent");
+			ReflectionUtils.makeAccessible(method);
+			ReflectionUtils.invokeMethod(method, null);
+
+		} catch (ClassNotFoundException ex) {
+			throw new IllegalStateException("Expected Jsf2FlowApplication: " + ex);
 		}
 	}
 
